# pcd-wo-succinct-arguments

./: Cargo.toml  README.md
src/: lib.rs  parameters.rs  utils.rs
src/hadamard/: mod.rs  predicate.rs
src/hadamard/accumulation/: decider.rs  mod.rs  prover.rs  verifier.rs
