[package]
name = "pcd-wo-succinct-arguments"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-ff = "0.4.2"
ark-ec = "0.4.2"
ark-poly = "0.4.2"
ark-poly-commit = "0.3.0"
ark-crypto-primitives = { version = "0.4.0", features = ["commitment", "sponge"]}
lazy_static = "1.4.0"
anyhow = "1.0.70"
ark-bls12-381 = "0.4.0"
ark-std = "0.4.0"
